objects/Inspection__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>NOT( ISBLANK(Completed_Date__c) ) &amp;&amp;  NOT( ISNULL(Completed_Date__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outstanding__c</fullName>
        <formula>(ISBLANK(Completed_Date__c)|| ISNULL(Completed_Date__c)) &amp;&amp;  Scheduled_Date__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled__c</fullName>
        <formula>(ISBLANK(Completed_Date__c)|| ISNULL(Completed_Date__c)) &amp;&amp;  Scheduled_Date__c &gt;= TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipName>Inspections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Surveys_Count__c</fullName>
        <label>Surveys Count</label>
        <summaryForeignKey>Survey__c.Inspection__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inspection</label>
    <nameField>
        <displayFormat>Ins-{00000000}</displayFormat>
        <label>Id Inspection</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckOnlyOneSurvey</fullName>
        <active>true</active>
        <errorConditionFormula>Surveys_Count__c &gt; 1</errorConditionFormula>
        <errorMessage>There can only be one survey per inspection</errorMessage>
    </validationRules>
</CustomObject>